[tool.poetry]
name = "supercharged_pipelines"
version = "0.1.0"
description = "ETL pipelines for the supercharged project."
authors = ["Aditya Rathod <15635979+adityarathod@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = {extras = ["sql"], version = "^3.1.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
